# pora-cli

./: Cargo.toml  README.md
pora/: cli.py  client.py
src/: abi.rs  config.rs  contract.rs  crypto.rs  github.rs  main.rs  output.rs  rpc.rs  tx.rs
src/commands/: performer.rs  request.rs  system.rs
src/mcp/: tools.rs
